# GetAwayAndroid

./: .gitmodules  gradle-wrapper.properties  settings.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.java  RunGame.java
client-GetAway/: build.gradle
client-GetAway/src/main/: AndroidManifest.xml
client-GetAway/src/main/cpp/: CMakeLists.txt
common/src/main/cpp/: native-lib.cpp
common/src/main/java/com/example/myapplication/: MainActivity.java
common/src/main/res/layout/: activity_main.xml
common/src/main/res/values/: strings.xml
getaway/: build.gradle
getaway/src/main/: AndroidManifest.xml
getaway/src/main/cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
server-GetAway/: build.gradle
server-GetAway/src/main/: AndroidManifest.xml
server-GetAway/src/main/cpp/: CMakeLists.txt
